--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
-<html><head><title>Live Cam</title></head>
+<html>
+  <head>
+    <title>Live Cam</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
+    <div>
+      <video id="video" width="720"></video><br>
+      <input id="rngTransport" type="range" min="0" max="1000" value="0" style="width:720px">
+    </div>
 
-<body>
-<video id="video" autoplay="true" controls="controls"></video>
-  <script>
+    <div>
+      
+      <button id="btnPlay" class="btn btn-primary">Play</button>
+      <button id="btn5secBack" class="btn btn-secondary"> - 5s. </button>
+      <button id="btn5secFor" class="btn btn-secondary"> + 5s. </button>
 
-    //no funciona si el script no está corriendo.
-    if (Hls.isSupported()) {
-      var video = document.getElementById('video');
-      var hls = new Hls();
+      <label for="rngVolume">Vol.
+        <input id="rngVolume" type="range" min="0" max="100" value="80">
+      </label>
+      <label for="rngSpeed">Speed
+        <input id="rngSpeed" type="range" min="0" max="200" value="100">
+      </label>
 
-      // vincula hls con elemento video
-      hls.attachMedia(video);
+    </div>
 
-      hls.on(Hls.Events.MEDIA_ATTACHED,  () => {
-        console.log("conectado");
+    <div>
 
-        //carga la fuente (script bash)
-        hls.loadSource("http://192.168.1.3:3000/mystream.m3u8");
-        hls.on(Hls.Events.MANIFEST_PARSED,  (event, data) => {
-          console.log(data.levels.length + " data levels");
-        });
-      });
-    }
 
-  </script>
 
-</body>
-</html>
+    </div>
+
+    <script src="index.js" type="text/javascript"></script>
+  </body>
+</html> 
