--- a/index.html
+++ b/index.html
@@ -6,32 +6,78 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
 
-    <div>
+  <body onload="configHLS()">
+
+    <div class="">
+      <label for="sourceLink"> Load (m3u) <input id="sourceLink" style="width:520px" type="text" min="0"></label>
+      <button id="btnSourceLink" class="btn btn-primary">Load</button>
+    </div>
+
+    <div class="videoPlayer">
       <video id="video" width="720"></video><br>
       <input id="rngTransport" type="range" min="0" max="1000" value="0" style="width:720px">
     </div>
 
-    <div>
+    <div class="contenedor">
       
-      <button id="btnPlay" class="btn btn-primary">Play</button>
-      <button id="btn5secBack" class="btn btn-secondary"> - 5s. </button>
-      <button id="btn5secFor" class="btn btn-secondary"> + 5s. </button>
+      <button id="btnPlay" class="btn btn-primary playerController">Play</button>
+      <button id="btn5secBack" class="btn btn-secondary playerController"> - 5s. </button>
+      <button id="btn5secFor" class="btn btn-secondary playerController"> + 5s. </button>
 
-      <label for="rngVolume">Vol.
+      <label for="rngVolume" class="playerController">Vol.
         <input id="rngVolume" type="range" min="0" max="100" value="80">
       </label>
-      <label for="rngSpeed">Speed
+      <label for="rngSpeed" class="playerController">Speed
         <input id="rngSpeed" type="range" min="0" max="200" value="100">
       </label>
 
     </div>
 
-    <div>
+    <h2>HLS data: </h2>
+    <div id="tablas" class="contenedor">
 
+      <table class="tabla">
+        <tr>
+          <td> Levels </td>
+          <td id="tdLevels"> </td>
+        </tr>
+        <tr>
+          <td> Current Level </td>
+          <td >  <input id="tdCurrentLevel" type="number" style="width:50px"></td>
+        </tr>
+      </table>
 
+      <table class="tabla">
+        <tr>
+          <td> videoCodec </td>
+          <td id="tdVideoCodec"> </td>
+        </tr>
+        <tr>
+          <td> audioCodec </td>
+          <td id="tdAudioCodec"> </td>
+        </tr>
+        <tr>
+          <td> dimensions </td>
+          <td id="tdDimensions"> </td>
+        </tr>
+      </table>
 
+      <table class="tabla">
+        <tr>
+          <td> Total duration </td>
+          <td id="tdDuration"> </td>
+        </tr>
+        <tr>
+          <td> Fragments </td>
+          <td id="tdFragments"> </td>
+        </tr>
+        <tr>
+          <td> Live </td>
+          <td id="tdLive"> </td>
+        </tr>
+      </table>
+ 
     </div>
 
     <script src="index.js" type="text/javascript"></script>
