--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body onload="configHLS()">
+  <body>
 
     <h2>Player</h2>
     <div class="container">
@@ -32,8 +32,6 @@
       <label for="rngSpeed" class="playerController">Speed
         <input id="rngSpeed" type="range" min="0" max="200" value="100">
       </label>
-
-      
 
     </div>
 
