--- a/index.html
+++ b/index.html
@@ -84,3 +84,11 @@
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html> 
+
+<!-- 
+  -Construir UI simple (funcional) con controles de player
+  -Conocer eventos hls (loguear)
+  -Estudiar errores hls (loguear para ver si es un error serio)
+  -si queda tiempo indagar coffeescript
+
+-->
